<resources>
    <string name="app_name">nytimes</string>

    <string name="fragment_main_title">The New York Times</string>
    <string name="fragment_main_section_search">Search</string>
    <string name="fragment_main_section_popular">Popular</string>
    <string name="fragment_main_menu_search">Search Articles</string>
    <string name="fragment_main_menu_viewed">Most Viewed</string>
    <string name="fragment_main_menu_shared">Most Shared</string>
    <string name="fragment_main_menu_emailed">Most emailed</string>

    <string name="fragment_articles_title_viewed">Most Viewed Articles</string>
    <string name="fragment_articles_title_shared">Most Shared Articles</string>
    <string name="fragment_articles_title_emailed">Most emailed Articles</string>
    <string name="fragment_articles_title_search">Search: %s</string>

    <string name="fragment_search_title">Search</string>
    <string name="fragment_search_hint">Search articles here…</string>
</resources>