<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragments.MainFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/fragment_main_title" />


    <!-- Search Section -->
    <TextView
        android:id="@+id/txt_section_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:padding="12dp"
        android:text="@string/fragment_main_section_search"
        android:textAppearance="?attr/textAppearanceHeadline6" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/item_search"
        style="@style/MenuCard"
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawablePadding="12dp"
            android:gravity="center_vertical"
            android:text="@string/fragment_main_menu_search"
            android:textAppearance="?attr/textAppearanceSubtitle2"
            app:drawableEndCompat="@drawable/ic_baseline_keyboard_arrow_right_24"
            app:drawableStartCompat="@drawable/ic_baseline_search_24" />

    </com.google.android.material.card.MaterialCardView>

    <!-- Popular Section -->
    <TextView
        android:id="@+id/txt_section_popular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:padding="12dp"
        android:text="@string/fragment_main_section_popular"
        android:textAppearance="?attr/textAppearanceHeadline6" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/item_most_viewed"
        style="@style/MenuCard"
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawablePadding="12dp"
            android:gravity="center_vertical"
            android:text="@string/fragment_main_menu_viewed"
            android:textAppearance="?attr/textAppearanceSubtitle2"
            app:drawableEndCompat="@drawable/ic_baseline_keyboard_arrow_right_24"
            app:drawableStartCompat="@drawable/ic_baseline_visibility_24" />

    </com.google.android.material.card.MaterialCardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/main_menu_divider_color" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/item_most_shared"
        style="@style/MenuCard"
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawablePadding="12dp"
            android:gravity="center_vertical"
            android:text="@string/fragment_main_menu_shared"
            android:textAppearance="?attr/textAppearanceSubtitle2"
            app:drawableEndCompat="@drawable/ic_baseline_keyboard_arrow_right_24"
            app:drawableStartCompat="@drawable/ic_baseline_share_24" />

    </com.google.android.material.card.MaterialCardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/main_menu_divider_color" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/item_most_emailed"
        style="@style/MenuCard"
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawablePadding="12dp"
            android:gravity="center_vertical"
            android:text="@string/fragment_main_menu_emailed"
            android:textAppearance="?attr/textAppearanceSubtitle2"
            app:drawableEndCompat="@drawable/ic_baseline_keyboard_arrow_right_24"
            app:drawableStartCompat="@drawable/ic_baseline_email_24" />

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>